# cpptest

./: .gitignore  CMakeLists.txt
.scipts/: pg_createdb.sh  pg_createuser.sh  pg_dropdb.sh  pg_initdb.sh  pg_start.sh  pg_stop.sh
include/: combinators-graphql.hpp  combinators.hpp  db-mock.hpp  db-pq.hpp  db-sqlite.hpp  db.hpp  fiber.hpp  finally.hpp  http.hpp  log.hpp  logging.hpp  rx.hpp  ssl-openssl.hpp  task.hpp  twitchircbot.hpp  ulid_uint128.hh  uv.hpp
include/cppcoro/: async_manual_reset_event.hpp
include/db/: common.hpp  connection.hpp  datasource.hpp  orm-common.hpp  orm-repository.hpp  orm.hpp  pgsql.hpp  pool.hpp  resultset.hpp  sqlite-createftssynctriggers.h  sqlite-createisotimestamptriggers.h  sqlite-sanitizewebsearch.h  sqlite.hpp  statement.hpp  transaction.hpp
include/http/: base64.hpp  binary-utils.hpp  common.hpp  fetch.hpp  gzip.hpp  http1-serve.hpp  http1.hpp  http2-serve.hpp  http2.hpp  serve.hpp  websocket.hpp
include/irc/: clearchat.hpp  common.hpp  join.hpp  out.hpp  parse.hpp  ping.hpp  privmsg.hpp  reconnect.hpp  roomstate.hpp  twitch-bot.hpp  twitch.hpp  usernotice.hpp
include/ssl/: ssl-openssl.hpp  ssl.hpp
include/uvpp/: async.hpp  check.hpp  dns.hpp  error.hpp  fs.hpp  handle.hpp  lib.hpp  loop.hpp  misc.hpp  req.hpp  signal.hpp  stream.hpp  tcp.hpp  threading.hpp  timer.hpp  tty.hpp  work.hpp
src/: main.cpp  task.cpp
src/db/: connection.cpp  datasource.cpp  orm-common.cpp  orm-repository.cpp  orm.cpp  pgsql.cpp  pool.cpp  resultset.cpp  sqlite-createftssynctriggers.cpp  sqlite-createisotimestamptriggers.cpp  sqlite-sanitizewebsearch.cpp  sqlite.cpp  statement.cpp  transaction.cpp
src/http/: base64.cpp  common.cpp  fetch.cpp  gzip.cpp  http1-serve.cpp  http1.cpp  http2-serve.cpp  http2.cpp  serve.cpp
src/res/sql/upgrades/: v00001.sql  v00002.sql  v0001.sql
src/ssl/: ssl-openssl.cpp  ssl.cpp
src/stuff/: main.cpp.old  main.cpp.xd
src/uvpp/: async.cpp  check.cpp  dns.cpp  error.cpp  fs.cpp  handle.cpp  req.cpp  signal.cpp  stream.cpp  tcp.cpp  threading.cpp  timer.cpp  tty.cpp
test/: test_db_sqlite.cpp
